crates/strider-analyze/tests/snapshots/v3__arm__memory__array_fill.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "11" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "22" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "22" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "11" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "25" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "18" -> "25" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "14" -> "25" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "15" -> "25" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
